# pixel-sorter

./: .gitignore  README.md  main.py  pyproject.toml
src/pixel_sorter/: pixel_sorter.py
